# django-custom-lookup-demo

./: README.md  pyproject.toml
.github/workflows/: poetry-upgrade.yml
demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/blog/: apps.py  models.py  urls.py  views.py
demo/blog/migrations/: 0001_initial.py  0002_auto_20230123_1851.py
demo/blog/templates/: blog_index.html
