[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]

[tool.poetry]
authors = ["Bruno Alla <replit@browniebroke.com>"]
description = "A demo of Django's 4.2 Lookup API"
name = "demo"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.2a1"
python = "^3.8"
"backports.zoneinfo" = "^0.2.1"
tzdata = "^2022.7"

[tool.poetry.dev-dependencies]
black = "*"
